--- a/hr_system/doc/hrsystem.yml
+++ b/hr_system/doc/hrsystem.yml
@@ -200,8 +200,8 @@ info:
   termsOfService: http://totally.not.placehold.er/
   contact:
     url: http://totally.not.placehold.er/
-    email: pwp-course@lists.oulu.fi
-    name: PWP Staff List
+    email: hr@oulu.fi
+    name: HR staff
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
