--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.29.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
