--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-dropdown": "^1.9.2",
