--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "eslint": "^8.13.0",
     "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.3",
@@ -25,7 +26,8 @@
     "build": "react-scripts build && move build ../hr_system/static",
     "build-linux": "react-scripts build && mv build ../hr_system/static",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
