--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "convert-array-to-csv": "^2.0.0",
     "eslint": "^8.13.0",
     "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.3",
     "react": "17.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "17.0.0",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.29.0",
