--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -25,8 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && move build ../hr_system/static",
-    "build-linux": "react-scripts build && mv build ../hr_system/static",
+    "build": "react-scripts build && move ./build ../hr_system/static",
+    "build-linux": "react-scripts build && mv ./build ../hr_system/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js"
