--- a/hr_client/package.json
+++ b/hr_client/package.json
@@ -30,7 +30,7 @@
     "build-linux": "react-scripts build && mv ./build ../hr_system/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "eslint-run": "eslint src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
